commit done home page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Rental Car</title>
   </head>
   <body>
